--- a/proto/wtools/amid/l4_files.test/Extract.html
+++ b/proto/wtools/amid/l4_files.test/Extract.html
@@ -52,7 +52,7 @@
   </head>
   <body>
     <script>
-      var _ = _global_.wTools;
+      let _ = _global_.wTools;
       wTester.verbosity = 10;
       wTester.testAll();
     </script>
